Fix excessive title width on mobile
Former-commit-id: 6dc0807bb0f6104adef80fcb9a9de3beec77d2c3

--- a/public/css/themes/creepy-cadence.css
+++ b/public/css/themes/creepy-cadence.css
@@ -446,3 +446,9 @@ a:active {
     margin-bottom: .4em;
   }
 }
+
+@media (max-width: 63em) {
+  #title {
+    transform: scale(1, 1.2);
+  }
+}
